03-istio/01-traffic-routing/nginx-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    version: v2
  name: nginx-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      annotations:
        readiness.status.sidecar.istio.io/applicationPorts: ""
      labels:
        app: nginx
        version: v2
    spec:
      containers:
      - image: nj93/istio-test-svc:v2
        name: nginx-v2
        ports:
        - containerPort: 80
        resources: {}
status: {}
