03-istio/01-traffic-routing/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-svc # changed the name from nginx-v1 to make the service name more generic
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http # give a name to the service port. If not istio will not work
  selector:
    app: nginx
    # version: v1 # make the service common to both v1 and v2 of nginx
  type: ClusterIP
status:
  loadBalancer: {}
