03-istio/01-traffic-routing/virtual-service-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-svc
spec:
  hosts: 
  - nginx-svc.dialog.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx-svc.dialog.svc.cluster.local
        subset: v2  
    match:
    - headers: # allows you to match multiple headers and do header based routing
        user-agent:
            regex: .*Safari.*
  - route:
    - destination:
        host: nginx-svc.dialog.svc.cluster.local 
        subset: v1
